--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -8,8 +8,8 @@
       <!--ジャンルの追加画面-->
       <%= form_with model: [:admin,@genre], local:true do |f| %>
         <div class="form-group my-4">
-          <%= f.label :name, "ジャンル名" %>
-          <%= f.text_field :name, placeholder: "ジャンル名" %>
+          <%= f.label "ジャンル名" %>
+          <%= f.text_field :genre_name, placeholder: "ジャンル名" %>
           <%= f.submit '追加', class:"btn btn-success" %>
         </div>
       <% end %>
@@ -25,7 +25,7 @@
         <tbody>
           <% @genres.each do |genre| %>
             <tr>
-              <td><%= genre.name %></td>
+              <td><%= genre.genre_name %></td>
               <td><%= link_to '編集', edit_admin_genre_path(genre.id), class: "btn btn-success" %> </td>
             </tr>
           <% end %>
