--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -3,6 +3,11 @@
     <div class="col-md-6 offset-md-3">
       <h2>新規投稿</h2>
       <%= form_with model: @post, local:true do |f| %>
+        <div class="form_input">
+          <%= f.label :genre_id, "ジャンル" %><br/>
+          <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, :include_blank => "ジャンルを選択してください" %>
+        </div>
+
         <div class="form-group">
           <%= f.label :投稿画像 %>
           <%= f.attachment_field :image, class: 'post_image' %>
