フォロー、コメント機能実装（非同期は未実施）

--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -5,8 +5,10 @@
         <tbody>
           <% @posts.each do |post| %>
             <tr>
-              <td><%= attachment_image_tag(post.user, :profile_image, size: "40x40", format: 'jpeg', fallback: "no_image.jpg") %><br>
-                  <%= post.user.name %></td>
+              <td>
+                <%= attachment_image_tag(post.user, :profile_image, size: "40x40", format: 'jpeg', fallback: "no_image.jpg") %><br>
+                <%= post.user.name %>
+              </td>
               <td><%= post.title %></td>
             </tr>
           <% end %>
