--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -24,7 +24,7 @@
           <%= f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1) %>
         </div>
 
-        <%= f.submit "更新" %>
+        <%= f.submit "更新", class: 'btn btn-success' %>
 
       <% end %>
     </div>
