--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -10,20 +10,25 @@
           <td>
             <%= @post.title %><br>
             <%= @post.body %><br>
+            <% if @post.gooded_by?(current_user) %>
+              <p>
+                <%= link_to post_goods_path(@post), method: :delete do %>
+                  ♥<%= @post.goods.count %> いいね
+                <% end %>
+              </p>
+              <% else %>
+              <p>
+                <%= link_to post_goods_path(@post), method: :post do %>
+                  ♡<%= @post.goods.count %> いいね
+                <% end %>
+              </p>
+            <% end %>
             <% if @post.user == current_user %>
               <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_book_#{@post.id}" %>
               <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%>
             <% end %>
           </td>
           <td>
-            <% if user_signed_in? %>
-              <% if current_user.following?(@user) %>
-                <%= link_to 'フォロー外す', unfollow_path(@user.id), method: :POST %>
-              <% else %>
-                <%= link_to 'フォローする', follow_path(@user.id), method: :POST %>
-              <% end %>
-            <% end %>
-
             <!--%= attachment_image_tag @post, :image, size: '200x150', class:"attachment product product_image fallback"%>-->
           </td>
         </tr>
@@ -40,7 +45,13 @@
         <p>コメント件数：<%= @post.comments.count %></p>
         <% @post.comments.each do |comment| %>
           <%= comment.user.name %>
-          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comments_body %>
+          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comments_body %><br>
+          <!--コメントを投稿したユーザーであれば削除可能-->
+          <% if comment.user == current_user %>
+          <div class="comment-delete">
+            <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+          </div>
+          <% end %>
         <% end %>
       </div>
     </div>
