--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -25,11 +25,13 @@
           <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user}" %>
         </div>
       <% end %>
-      <% if user_signed_in? %>
-        <% if current_user.following?(@user) %>
-          <%= link_to 'フォロー外す', unfollow_path(@user.id), method: :POST %>
-        <% else %>
-          <%= link_to 'フォローする', follow_path(@user.id), method: :POST %>
+      <% if @user != current_user %>
+        <% if user_signed_in? %>
+          <% if current_user.following?(@user) %>
+            <%= link_to 'フォロー外す', unfollow_path(@user.id), method: :POST %>
+          <% else %>
+            <%= link_to 'フォローする', follow_path(@user.id), method: :POST %>
+          <% end %>
         <% end %>
       <% end %>
 
