--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -10,19 +10,35 @@
           <td>
             <%= @post.title %><br>
             <%= @post.body %><br>
+            <!--goodボタン-->
             <% if @post.gooded_by?(current_user) %>
               <p>
                 <%= link_to post_goods_path(@post), method: :delete do %>
-                  ♥<%= @post.goods.count %> いいね
+                  ♥<%= @post.goods.count %>
                 <% end %>
               </p>
               <% else %>
               <p>
                 <%= link_to post_goods_path(@post), method: :post do %>
-                  ♡<%= @post.goods.count %> いいね
+                  ♡<%= @post.goods.count %>
                 <% end %>
               </p>
             <% end %>
+            <!--badボタン-->
+            <% if @post.baded_by?(current_user) %>
+              <p>
+                <%= link_to post_bads_path(@post), method: :delete do %>
+                  だめ<%= @post.bads.count %> 
+                <% end %>
+              </p>
+              <% else %>
+              <p>
+                <%= link_to post_bads_path(@post), method: :post do %>
+                  かいじょ<%= @post.bads.count %>
+                <% end %>
+              </p>
+            <% end %>
+
             <% if @post.user == current_user %>
               <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_book_#{@post.id}" %>
               <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%>
