--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
             <li><%= link_to ' ランキング', posts_path, class: "nav-link text-light fas fa-user-circle" %></li>
             <li><%= link_to ' チャット', class: "nav-link text-light fas fa-birthday-cake" %></li>
             <li><%= link_to ' マイページ', user_path(current_user), class: "nav-link text-light fas fa-shopping-cart" %></li>
-            <li><%= link_to ' 通知', class: "nav-link text-light fas fa-shopping-cart" %></li>
+            <li><%= link_to ' 通知', notifications_path, class: "nav-link text-light fas fa-shopping-cart" %></li>
             <li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "nav-link text-light fas fa-sign-out-alt" %></li>
           <% elsif admin_signed_in? %>
           <!--adminのヘッダー-->
