--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -28,7 +28,7 @@
             <% if @post.baded_by?(current_user) %>
               <p>
                 <%= link_to post_bads_path(@post), method: :delete do %>
-                  だめ<%= @post.bads.count %> 
+                  だめ<%= @post.bads.count %>
                 <% end %>
               </p>
               <% else %>
@@ -50,25 +50,22 @@
         </tr>
       </table>
 
-      <div class="new-comment">
-        <%= form_with(model:[@post, @comment], local: true) do |f| %>
-          <%= f.text_area :comments_body,　placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      </div>
-
-      <div class="comments">
-        <p>コメント件数：<%= @post.comments.count %></p>
-        <% @post.comments.each do |comment| %>
-          <%= comment.user.name %>
-          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comments_body %><br>
-          <!--コメントを投稿したユーザーであれば削除可能-->
-          <% if comment.user == current_user %>
-          <div class="comment-delete">
-            <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+      <div class="row">
+        <% if user_signed_in? %>
+          <div class="comment-create">
+            <h3 class="text-left">レビューを投稿する</h3>
+            <%= render 'user/comments/form', comment: @comment, post: @post %>
           </div>
-          <% end %>
         <% end %>
+        <br>
+        <ul>
+          <li class="comment-create">
+            <h3 class="text-left title">レビュー</h3>
+          </li>
+          <li id="comments_area">
+            <%= render 'user/comments/index', comments: @comments %>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
