--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -4,7 +4,7 @@
       <table class='table table-hover table-inverse'>
         <tbody>
           <div id="post_index_all">
-            <%= render '_index_all', items: @items %>
+            <%= render 'index_all', posts: @posts %>
           </div>
         </tbody>
       </table>
