投稿一覧レイアウト

--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
+<div class="card-list-containar py-5">
       <table class='table table-hover table-inverse'>
         <tbody>
           <div id="post_index_all">
@@ -9,6 +7,4 @@
         </tbody>
       </table>
       <!--%= paginate @posts %>-->
-    </div>
-  </div>
 </div>
