--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -1,4 +1,4 @@
-<%= comments.count %>件コメント
+<%= comments.count %>件のコメント
 <h6 class="more" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">もっと見る....</h6>
 <% comments.first(2).each do |comment| %>
   <% unless comment.id.nil? %>
