--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -1,16 +1,46 @@
 <% posts.each do |post| %>
-  <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "190x190", class: "coffee_image_media" %>
-  <% end %>
-  <%= link_to user_path(post.user_id) do %>
-      <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"profile-img-circle", size: "30x30" %>
-      <%= post.user.name %>
-  <% end %>
-  <%= post.title %>
-  <div id="index_good_<%= post.id %>">
-    <%= render 'user/goods/good', post: post %>
-  </div>
-  <div id="index_bad_<%= post.id %>">
-    <%= render 'user/bads/bad', post: post %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-3">
+        <%= link_to user_path(post.user_id) do %>
+          <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "60x60" %>
+          <%= post.user.name %>
+        <% end %>
+        </div>
+        <div class="col-9">
+          <p class="card-title">
+            <%= link_to(post_path(post.id), class:"text-dark") do %>
+              <%= post.title %>
+            <% end %>
+          </p>
+          <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
+          <div class="row">
+            <div class="col-1">
+              <div id="index_good_<%= post.id %>">
+                <%= render 'user/goods/good', post: post %>
+              </div>
+            </div>
+            <div class="col-1">
+              <div id="index_bad_<%= post.id %>">
+                <%= render 'user/bads/bad', post: post %>
+              </div>
+            </div>
+            <div class="col-4 offset-4">
+              <%= link_to(post_path(post.id), class:"text-dark") do %>
+                <%= post.comments.count %>件のコメント
+              <% end %>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+    <div class="text-center mb-4">
+    <%= link_to post_path(post) do %>
+      <%= attachment_image_tag post, :image, size: "600x400",class: "post_image_media" %>
+    <% end %>
+    </div>
   </div>
 <% end %>
