--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,22 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+
+// 全般
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+// ヘッダー
+.header-items {
+  margin-top: 15px;
+}
+
+// userのshow
+.text-count {
+  margin-left : 200px;
+  color: #666;
+}
