--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -10,9 +10,9 @@
       </div>
       <div class="col-7">
         <div class="row">
-          <div class="col-5 offset-1 mt-5 text-center">
+          <div class="col-5 offset-2 mt-5 text-center">
             <th><%= @user.follower.count %></th><br>
-            <th>フォロワー</th>
+            <th>フォロー</th>
           </div>
           <div class="col-5 mt-5 mb-3 text-center">
             <th><%= @user.followed.count %></th><br>
@@ -24,9 +24,9 @@
           <% end %>
           <% if @user != current_user %>
             <% if user_signed_in? %>
-            <div class="col-5 offset-1 text-center">
+            <div class="col-5 offset-2 text-center">
               <% if current_user.following?(@user) %>
-                <%= link_to '', user_unfollow_path(@user.id), method: :POST, class: "btn btn-outline-secondary btn-block fas fa-user-check" %>
+                <%= link_to '', user_unfollow_path(@user.id), method: :POST, class: "btn btn-outline-secondary btn-block fas fa-user-check", style: "background-color: #0066FF; color: #FFFFFF" %>
               <% else %>
                 <%= link_to '', user_follow_path(@user.id), method: :POST, class: "btn btn-outline-secondary btn-block fas fa-user-plus" %>
               <% end %>
