--- a/app/views/user/bads/_bad.html.erb
+++ b/app/views/user/bads/_bad.html.erb
@@ -13,7 +13,7 @@
         <% end %>
     <% end %>
 <% else %>
-    <i class="fa fa-heart" aria-hidden="true">
+    <i class="far fa-thumbs-down" aria-hidden="true">
       <%= post.bads.count %>
     </i>
 <% end %>
