--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 offset-md-3">
       <div class="card w-100 mx-auto mt-4 shadow-lg">
         <div class="card-body">
-          <h2>新規投稿</h2>
+          <h3 class="new_post">新規投稿</h3>
           <!--部分テンプレ準備する-->
           <%= form_with model: @post, local:true do |f| %>
             <div class="form_input mt-3">
