--- a/app/views/user/posts/search.html.erb
+++ b/app/views/user/posts/search.html.erb
@@ -2,6 +2,7 @@
       <table class='table table-hover table-inverse'>
         <tbody>
           <div class="index_search">
+            <h4 class="search-text">検 索 結 果</h4><br>
             <%= render 'select_form', post: @post %>
           </div>
           <div id="post_index_all">
