--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg ">
     <div class="container">
       <a class="nav-link", href="/"><span>RoughWriter</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,11 +12,11 @@
             <div class="nav-link text-light mr-5 mt-3">
               ようこそ <%= current_user.name %> さん
             </div>
-            <li class="header-items"><%= link_to ' 投稿する', new_post_path, class: "nav-link text-light fas fa-user-circle" %></li>
-            <li class="header-items"><%= link_to ' ランキング', posts_path, class: "nav-link text-light fas fa-user-circle" %></li>
-            <li class="header-items"><%= link_to ' チャット', class: "nav-link text-light fas fa-birthday-cake" %></li>
-            <li class="header-items"><%= link_to ' マイページ', user_path(current_user), class: "nav-link text-light fas fa-shopping-cart" %></li>
-            <li class="header-items"><%= link_to ' 通知', notifications_path, class: "nav-link text-light fas fa-shopping-cart" %></li>
+            <li class="header-items"><%= link_to ' 投稿する', new_post_path, class: "nav-link text-light fas fa-calendar-plus" %></li>
+            <li class="header-items"><%= link_to ' 投稿一覧', posts_path, class: "nav-link text-light fas fa-file-alt" %></li>
+            <li class="header-items"><%= link_to ' チャット', chats_path(current_user), class: "nav-link text-light fas fa-comment-dots" %></li>
+            <li class="header-items"><%= link_to ' マイページ', user_path(current_user), class: "nav-link text-light fas fa-user" %></li>
+            <li class="header-items"><%= link_to ' 通知', notifications_path, class: "nav-link text-light fas fa-bell" %></li>
             <li class="header-items"><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: "nav-link text-light fas fa-sign-out-alt" %></li>
           <% elsif admin_signed_in? %>
           <!--adminのヘッダー-->
