--- a/app/views/user/goods/_good.html.erb
+++ b/app/views/user/goods/_good.html.erb
@@ -2,18 +2,18 @@
     <% if current_user.already_gooded?(post) %>
         <%= link_to post_goods_path(post), method: :delete, remote: true do %>
             <i class="far fa-thumbs-up" aria-hidden="true" style="color: red;">
-                <%= post.goods.count %>
+              <%= post.goods.count %>
             </i>
         <% end %>
     <% else %>
         <%= link_to post_goods_path(post), method: :post, remote: true do %>
             <i class="fas fa-thumbs-up" aria-hidden="true" style="color: #C0C0C0;">
-                <%= post.goods.count %>
+              <%= post.goods.count %>
             </i>
         <% end %>
     <% end %>
 <% else %>
-    <i class="fa fa-heart" aria-hidden="true">
-            <%= post.goods.count %>
+    <i class="fas fa-thumbs-up" aria-hidden="true">
+      <%= post.goods.count %>
     </i>
 <% end %>
