--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -9,38 +9,38 @@
         <% end %>
         </div>
         <div class="col-9">
+          <p class="card-text">
+            ジャンル ： <%= post.genre.genre_name %>
+          </p>
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-              <%= post.title %>
+            タイトル : <%= post.title %>
             <% end %>
           </p>
-          <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
-          <div class="row">
-            <div class="col-1">
-              <div id="index_good_<%= post.id %>">
-                <%= render 'user/goods/good', post: post %>
-              </div>
-            </div>
-            <div class="col-1">
-              <div id="index_bad_<%= post.id %>">
-                <%= render 'user/bads/bad', post: post %>
-              </div>
-            </div>
-            <div class="col-4 offset-4">
-              <%= link_to(post_path(post.id), class:"text-dark") do %>
-                <%= post.comments.count %>件のコメント
-              <% end %>
-            </div>
-          </div>
-
-
         </div>
       </div>
     </div>
-    <div class="text-center mb-4">
+    <div class="text-center ml-5 mb-2">
     <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "600x400",class: "post_image_media" %>
+      <%= attachment_image_tag post, :image, size: "600x400",class:"post_image_media" %>
     <% end %>
     </div>
+      <div class="row mb-3">
+        <div class="col-2 offset-2 mt-2">
+          <div id="index_good_<%= post.id %>">
+            <%= render 'user/goods/good', post: post %>
+          </div>
+        </div>
+        <div class="col-2 mt-2">
+          <div id="index_bad_<%= post.id %>">
+            <%= render 'user/bads/bad', post: post %>
+          </div>
+        </div>
+        <div class="col-4 offset-2 mt-2">
+          <%= link_to(post_path(post.id), class:"text-dark") do %>
+            <%= post.comments.count %>件のコメント
+          <% end %>
+        </div>
+      </div>
   </div>
 <% end %>
