--- a/app/views/user/posts/_index_user.html.erb
+++ b/app/views/user/posts/_index_user.html.erb
@@ -8,14 +8,14 @@
         <div class="text-center">
           <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "70x70" %><br>
 
-            <%= post.user.name %>
+          <%= post.user.name %>
           </div>
         <% end %>
         </div>
         <div class="col-10">
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-              <%= post.title %>
+               タイトル : <%= post.title %>
             <% end %>
           </p>
           <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
@@ -36,8 +36,6 @@
               <% end %>
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
