検索機能の追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,5 +32,12 @@
           <% end %>
         </ul>
       </div>
+      <dl class="searchbox mt-1">
+        <!--会員側の商品検索-->
+        <%= search_form_for @search, url: users_user_search_path do |f| %>
+          <dt><%= f.text_field :name_cont ,placeholder: '検索するテキストを入力...' %></dt>
+          <dd><%= f.submit ("検索") , class: 'search-btn'%></dd>
+        <% end %>
+      </dl>
   </nav>
 </header>
