--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
+  <div class="card w-75 mx-auto mt-4 shadow-lg">
     <div class="card-body">
       <div class="row">
         <table class="table table-hover table-invers">
@@ -20,16 +20,17 @@
               タイトル : <%= @post.title %>
             <% end %>
             </p>
-            <%= @post.body %>
-              <!--%= attachment_image_tag @post, :image, size: '200x150', class:"attachment product product_image fallback"%>-->
+            <%= @post.body %><br>
+
+            <%= attachment_image_tag @post, :image, size: '600x450', class:"attachment product product_image fallback"%><br>
             <% if @post.user == current_user %>
               <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_book_#{@post.id}" %>
               <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%>
             <% end %>
-    
+
           </div>
         </table>
-    
+    </div>
         <div class="row">
           <% if user_signed_in? %>
             <div class="comment-create">
@@ -47,6 +48,4 @@
             </li>
           </ul>
         </div>
-    
-    </div>
     </div>
