--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,18 +38,17 @@
 
 /* 検索ボックス */
 dl.searchbox{
-  width: 350px;
+  margin-left: 20px;
+  width: 200px;
   position:relative;
   background-color:#fff;
   border:1px solid #aaa;
   border-radius:6px;
 }
-dl.searchbox dt{
-  padding:3px;
-}
+
 dl.searchbox dt input{
   width:70%;
-  height:30px;
+  height:28px;
   line-height:30px;
   background:none;
   border:none;
@@ -64,7 +63,7 @@ dl.searchbox dd{
   display:block;
   background:#5fad35;
   width:100%;
-  height:36px;
+  height:27px;
   line-height:36px;
   border:none;
   border-radius: 0 6px 6px 0;
