--- a/app/views/user/users/followings.html.erb
+++ b/app/views/user/users/followings.html.erb
@@ -12,10 +12,10 @@
       <tbody>
         <tr>
           <% @users.each do |user| %>
-          <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+          <td><%= attachment_image_tag(user, :profile_image, size: "40x40", fallback: "no_image.jpg") %></td>
           <td><%= user.name %></td>
           <td><span>フォロー数:</span><%= user.followed.count %></td>
-          <td><span>フォロワー数:</span><%= user.follower.count %></td>
+          <td><span>フォロワー数:</span><%= user.followers.count %></td>
           <td><%= link_to 'show', user_path(user) %></td>
         </tr>
         <% end %>
