--- a/app/views/user/users/goods.html.erb
+++ b/app/views/user/users/goods.html.erb
@@ -1,5 +1,5 @@
-<h5 class="text-count"><%= posts.count %>件の投稿</h5>
-<% posts.each do |post| %>
+<h5 class="text-count">高評価した投稿</h5>
+<% @good_posts.each do |post| %>
   <div class="card w-75 mx-auto mt-4 shadow-lg">
     <div class="card-body">
       <div class="row">
