--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -3,24 +3,33 @@
     <div class="col-md-6 offset-md-3">
     <div class="row">
       <div class="col-4 text-center">
-        <tr><%= attachment_image_tag current_user, :profile_image, size: "150x150", fallback: "no_image.jpg", class: "mt-3 rounded-circle" %></tr><br>
-        <div class="user-name mb-2">
-          <tr><%= @user.name %></tr>
+        <tr><%= attachment_image_tag @user, :profile_image, size: "150x150", fallback: "no_image.jpg", class: "mt-3 rounded-circle" %></tr><br>
+        <div class="user-name my-2">
+          <tr><strong><%= @user.name %></strong></tr>
         </div>
       </div>
       <div class="col-7">
         <div class="row">
           <div class="col-5 offset-2 mt-5 text-center">
-            <th><%= @user.follower.count %></th><br>
-            <th>フォロー</th>
+            <%= link_to(user_followers_path(@user.id), class:"text-dark") do %>
+              <th><%= @user.follower.count %></th><br>
+              <th>フォロー</th>
+            <% end %>
           </div>
           <div class="col-5 mt-5 mb-3 text-center">
-            <th><%= @user.followed.count %></th><br>
-            <th>フォロワー </th>
+            <%= link_to(user_followings_path(@user.id), class:"text-dark") do %>
+              <th><%= @user.followed.count  %></th><br>
+              <th>フォロワー </th>
+            <% end %>
           </div>
         <!--もしログインしているユーザーなら編集ボタンを表示-->
           <% if @user.id == current_user.id %>
-            <%= link_to '', edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user}" %>
+          <div class="col-5 offset-2 text-center">
+            <%= link_to '', edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user}" %>
+          </div>
+          <div class="col-5 text-center">
+            <%= link_to '', user_goods_path(@user), class: "btn btn-outline-secondary btn-block fas fa-thumbs-up" %>
+          </div>
           <% end %>
           <% if @user != current_user %>
             <% if user_signed_in? %>
@@ -40,9 +49,9 @@
     </div>
       <tr>
         <div class="my-introduction mb-3">
-          <th><%= @user.introduction %></th>
+          <th><%= @user.introduction %></th></br>
         </div>
-      </tr><br>
+      </tr>
       <tr>
         <div class="birthday-icon fas fa-birthday-cake"></div>
         <th><%= @user.birth_date %></th>
