--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-md-10 offset-1">
             <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
 
             <table class="message table">
