--- a/app/views/user/chats/index.html.erb
+++ b/app/views/user/chats/index.html.erb
@@ -1,5 +1,4 @@
-<% @anotherUserRooms.each do |e| %>
-  <%= Chat.find_by(id: e.room.chat_ids.last).message %>
-  <%= User.find_by(id: e.user_id).name %>
-  <%= User.find_by(id: e.user_id).profile_image %>
+<% @anotherUserRooms.each do |user_room| %>
+  <%= Chat.find_by(id: user_room.room.chat_ids.last).message %>
+  <%= User.find_by(id: user_room.user_id).name %>
 <% end %>
