--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card w-75 mx-auto mt-4 shadow-lg">
+  <div class="card w-75 mx-auto my-4 shadow-lg">
     <div class="card-body">
       <div class="row">
         <table class="table table-hover table-invers">
@@ -32,20 +32,22 @@
         </table>
     </div>
         <div class="row">
-          <% if user_signed_in? %>
-            <div class="comment-create">
-              <h3 class="text-left">レビューを投稿する</h3>
-              <%= render 'user/comments/form', comment: @comment, post: @post %>
-            </div>
-          <% end %>
+          <div class="col-5 offset-7">
+            <% if user_signed_in? %>
+              <div class="comment-create">
+                <%= render 'user/comments/form', comment: @comment, post: @post %>
+              </div>
+            <% end %>
           <br>
-          <ul>
-            <li class="comment-create">
-              <h3 class="text-left title">レビュー</h3>
-            </li>
-            <li id="comments_area">
-              <%= render 'user/comments/index', comments: @comments %>
-            </li>
-          </ul>
+          </div>
         </div>
+        <div class=""></div>
+        <ul>
+          <li class="comment-create">
+            <h3 class="text-left title">レビュー</h3>
+          </li>
+          <li id="comments_area">
+            <%= render 'user/comments/index', comments: @comments %>
+          </li>
+        </ul>
     </div>
