--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 offset-1">
+    <div class="col-md-9 offset-3">
       <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
       <table>
         <% @chats.each do |chat| %>
           <% if chat.user_id == current_user.id %>
-          <tr class="row justify-content-center message">
+          <tr class="row justify-content-center message mb-4">
             <td class="col-2">
               <%= link_to attachment_image_tag(chat.user, :profile_image, fallback: "no_image.jpg", size:'80x80', class:"profile-image align-top rounded-circle"), user_path(chat.user) %>
             </td>
@@ -24,7 +24,7 @@
             <!-- メッセージを左側に表示する -->
             <td class="col-10">
               <div class="col-11 float-right">
-                <%= chat.user.name %> <br>
+                <div class="text-right"><%= chat.user.name %></div> <br>
               </div>
               <!-- 自分以外用の吹き出しCSSクラスを適用する -->
               <div class="other-user-says">
