--- a/app/views/user/users/followers.html.erb
+++ b/app/views/user/users/followers.html.erb
@@ -1,27 +1,31 @@
-<h1>Follow Users</h1>
-<div class="follow-users">
-  <% if @users.exists? %>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>image</th>
-          <th>name</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <% @users.each do |user| %>
-          <td><%= attachment_image_tag(user, :profile_image, size: "40x40", fallback: "no_image.jpg") %></td>
-          <td><%= user.name %></td>
-          <td><span>フォロー数:</span><%= user.followed.count %></td>
-          <td><span>フォロワー数:</span><%= user.follower.count %></td>
-          <td><%= link_to 'show', user_path(user) %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <% else %>
-        <p>ユーザーはいません</p>
-  <% end %>
+<div class="container">
+  <div class-"row">
+    <h4 class="followers-text mt-4">フォロワー一覧</h4>
+    <div class="follow-users">
+      <% if @users.exists? %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>画像</th>
+              <th>ユーザー名</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <% @users.each do |user| %>
+              <td><%= attachment_image_tag(user, :profile_image, size: "40x40", fallback: "no_image.jpg") %></td>
+              <td><%= user.name %></td>
+              <td><span>フォロー数:</span><%= user.followed.count %></td>
+              <td><span>フォロワー数:</span><%= user.follower.count %></td>
+              <td><%= link_to 'ユーザーページ', user_path(user), class: "btn btn-outline-secondary text-center" %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+            <p>ユーザーはいません</p>
+      <% end %>
+    </div>
+  </div>
 </div>
