--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -5,7 +5,7 @@
     <li class="comment-container" id="comment-<%= comment.id %>">
      <div class="comment-box">
         <div class="comment-avatar">
-          <%= attachment_image_tag comment.user, :profile_image, fallback: "no_image.jpg", class:"comment-image", size: "40x40" %>
+          <%= attachment_image_tag comment.user, :profile_image, fallback: "no_image.jpg", class:"comment-image rounded-circle", size: "40x40" %>
          </div>
          <div class="comment-text">
             <p><%= link_to "@#{comment.user.name}", user_path(comment.user.id) %></p>
