--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -6,7 +6,9 @@
           <div class="col-md-2">
             <%= link_to user_path(@post.user_id) do %>
               <%= attachment_image_tag(@post.user, :profile_image, size: "80x80", format: 'jpeg', class:"mt-3 rounded-circle", fallback: "no_image.jpg") %><br>
-              <%= @post.user.name %>
+              <div class="text-center mr-4">
+                <%= @post.user.name %>
+              </div>
             <% end %>
           </div>
           <div class="col-md-9">
@@ -24,30 +26,30 @@
 
             <%= attachment_image_tag @post, :image, size: '600x450', class:"attachment product product_image fallback"%><br>
             <% if @post.user == current_user %>
-              <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_book_#{@post.id}" %>
+              <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_post_#{@post.id}" %>
               <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_post_#{@post.id}"%>
             <% end %>
-
           </div>
         </table>
-    </div>
-        <div class="row">
-          <div class="col-5 offset-7">
-            <% if user_signed_in? %>
-              <div class="comment-create">
-                <%= render 'user/comments/form', comment: @comment, post: @post %>
-              </div>
-            <% end %>
-          <br>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-5 offset-7">
+          <% if user_signed_in? %>
+            <div class="comment-create">
+              <%= render 'user/comments/form', comment: @comment, post: @post %>
+            </div>
+          <% end %>
+        <br>
         </div>
-        <div class=""></div>
-        <ul>
-          <li class="comment-create">
-            <h3 class="text-left title">レビュー</h3>
-          </li>
-          <li id="comments_area">
-            <%= render 'user/comments/index', comments: @comments %>
-          </li>
-        </ul>
+      </div>
     </div>
+  </div>
+      <div class=""></div>
+      <ul>
+        <li class="comment-create">
+          <h3 class="text-left title">レビュー</h3>
+        </li>
+        <li id="comments_area">
+          <%= render 'user/comments/index', comments: @comments %>
+        </li>
+      </ul>
