--- a/app/views/user/users/user_search.html.erb
+++ b/app/views/user/users/user_search.html.erb
@@ -1,26 +1,31 @@
 <div class="container">
-  <h2>検索結果</h2>
-  (全<%= @search_users.count %>件)
-   <div class="row">
-    <div class="col-1"></div>
-     <div class="col-md-10 mx-auto">
-       <div class="list-wrap">
-        <% @search_users.each do |user| %>
-       <div class="list-box">
-       <div class="image_wrap">
-        <%= link_to user_path(user.id) do %>
-        <%= attachment_image_tag user, :profile_image, size: '200x150', class:"attachment product product_image fallback" %>
-        <% end %></div>
-       <div class="list-comment">
-        <span class="list-name"><%= user.name %></span><br />
-        <!--<span class="list-price">￥<#%= user.sales_price.to_s(:delimited) %></span>-->
-       </div>
-       </div>
-       <% end %>
-     </div>
-    
+  <div class-"row">
+    <h4 class="search_users-text mt-4">検索結果</h4>
+    <div class="follow-users">
+      <% if @users =! nil %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>画像</th>
+              <th>ユーザー名</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <% @search_users.each do |user| %>
+              <td><%= attachment_image_tag(user, :profile_image, size: "40x40", fallback: "no_image.jpg", class:"rounded-circle") %></td>
+              <td><%= user.name %></td>
+              <td><span>フォロー:</span><%= user.followed.count %></td>
+              <td><span>フォロワー:</span><%= user.followers.count %></td>
+              <td><%= link_to 'ユーザーページ', user_path(user), class: "btn btn-outline-secondary text-center" %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+            <p>ユーザーはいません</p>
+      <% end %>
     </div>
-   <div class="col-md-1"></div>
   </div>
 </div>
-</html>
