--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,40 +1,52 @@
-<h2>Sign up</h2>
+<div class="background">
+  <div class="container">
+    <div class="row">
+      <div class="col-6 offset-3">
+        <div class="box ard w-100 mx-auto mt-4 mb-4 shadow-lg">
+          <div class="card-body">
+            <h2 class="text-center mt-5">新規登録</h2>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= render "users/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+              <div class="field text-center my-5">
+                <%= f.label :ユーザー名 %><br />
+                <%= f.text_field :name %>
+              </div>
 
-  <div class="field">
-    <%= f.label :ユーザー名 %><br />
-    <%= f.text_field :name %>
+              <div class="field text-center my-5">
+                <%= f.label :メールアドレス %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
+              </div>
+
+              <div class="field text-center my-5">
+                <%= f.label :生年月日 %><br />
+                <!--選択バー作成-->
+                <%= f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1) %>
+              </div>
+
+              <div class="field text-center my-5">
+                <%= f.label :パスワード %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
+
+              <div class="field text-center my-5">
+                <%= f.label :確認パスワード %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              </div>
+
+              <div class="actions text-center my-5">
+                <%= f.submit "Sign up" %>
+              </div>
+            <% end %>
+
+            <%= render "users/shared/links" %>
+
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :生年月日 %><br />
-    <!--選択バー作成-->
-    <%= f.date_select :birth_date, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :確認パスワード %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
