--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,3 +1,10 @@
-<h1>RoughWriter</h1></h1>
-
-<p>text</p>
+<div id="box">
+  <div id="images">
+    <div class="image1"></div>
+    <div class="image2"></div>
+    <div class="image3"></div>
+    <div class="image4"></div>
+    <div class="image5"></div>
+    <div class="image6"></div>
+  </div>
+</div>
