--- a/app/assets/stylesheets/user/posts.scss
+++ b/app/assets/stylesheets/user/posts.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the user::posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+strong {
+  font-size: 20px;
+}
