--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-9 offset-3">
       <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
-      <table>
+      <table class="chat_table mb-5">
         <% @chats.each do |chat| %>
           <% if chat.user_id == current_user.id %>
           <tr class="row justify-content-center message mb-4">
@@ -38,9 +38,9 @@
         <% end %>
       <% end %>
       </table>
-      <span>
+      <span class="chat-info">
         <%= form_with model: @chat do |f| %>
-          <%= f.text_field :message %>
+          <%= f.text_field :message, placeholder: 'メッセージを入力' %>
           <%= f.hidden_field :room_id %>
         <% end %>
       </span>
