--- a/app/views/user/inquiries/new.html.erb
+++ b/app/views/user/inquiries/new.html.erb
@@ -6,7 +6,7 @@
           <div class="contact_form text-center">
             <%= form_with model: @inquiry, local:true do |f| %>
             <%#= render 'layouts/error_messages', model: f.object %>
-              <h4 class="my-4">お問い合わせフォーム</h4>
+              <h4 class="my-4 text-secondary">お問い合わせフォーム</h4>
               <h5 class="my-4">お名前</h5>
               <%= f.text_field :name %>
               <h5 class="my-4">メールアドレス</h5>
@@ -14,7 +14,7 @@
               <h5 class="my-4">お問い合わせ内容</h5>
               <%= f.text_area :message %>
             <div>
-              <p class="my-4"><%= f.submit "送信" %></p>
+              <p class="my-4"><%= f.submit "送 信", class: "btn btn-sm btn-primary py-2 px-3" %></p>
             </div>
             <% end %>
           </div>
