--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -9,13 +9,16 @@
         <% end %>
         </div>
         <div class="col-9">
-          <p class="card-text">
+          <p class="card-genre text-secondary">
             ジャンル ： <%= post.genre.genre_name %>
           </p>
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-            タイトル : <%= post.title %>
+            <strong><%= post.title %></strong>
             <% end %>
+          </p>
+          <p class="card-time text-secondary">
+            <%= post.created_at.to_s(:datetime_jp) %>
           </p>
         </div>
       </div>
