--- a/app/views/user/posts/_index_user.html.erb
+++ b/app/views/user/posts/_index_user.html.erb
@@ -15,7 +15,7 @@
         <div class="col-10">
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-               タイトル : <%= post.title %>
+            <strong><%= post.title %></strong>
             <% end %>
           </p>
           <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
