チャット一覧追加

--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -53,8 +53,9 @@
         </div>
       </tr>
       <tr>
-        <div class="birthday-icon fas fa-birthday-cake"></div>
-        <th><%= @user.birth_date %></th>
+        <div class="birthday-icon fas fa-birthday-cake text-secondary">
+          <th><%= @user.birth_date %></th>
+        </div>
       </tr>
     </div>
   </div>
