--- a/app/views/user/posts/_index_user.html.erb
+++ b/app/views/user/posts/_index_user.html.erb
@@ -13,12 +13,12 @@
         <% end %>
         </div>
         <div class="col-10">
+          <p class="card-text text-secondary">ジャンル：<%= post.genre.genre_name %></p>
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
             <strong><%= post.title %></strong>
             <% end %>
           </p>
-          <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
           <div class="row">
             <div class="col-1">
               <div id="index_good_<%= post.id %>">
