--- a/app/views/user/users/goods.html.erb
+++ b/app/views/user/users/goods.html.erb
@@ -1,4 +1,4 @@
-<h5 class="text-count">高評価した投稿</h5>
+<h5 class="text-count mt-4">高評価した投稿</h5>
 <% @good_posts.each do |post| %>
   <div class="card w-75 mx-auto mt-4 shadow-lg">
     <div class="card-body">
@@ -13,12 +13,14 @@
         <% end %>
         </div>
         <div class="col-10">
-          <p class="card-title">
+          <p class="card-genre text-secondary">
+            ジャンル ： <%= post.genre.genre_name %>
+          </p>
+          <p class="card-title mb-3">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-               タイトル : <%= post.title %>
+            <strong><%= post.title %></strong>
             <% end %>
           </p>
-          <p class="card-text">ジャンル：<%= post.genre.genre_name %></p>
           <div class="row">
             <div class="col-1">
               <div id="index_good_<%= post.id %>">
@@ -30,9 +32,14 @@
                 <%= render 'user/bads/bad', post: post %>
               </div>
             </div>
-            <div class="col-4 offset-4">
-              <%= link_to(post_path(post.id), class:"text-dark") do %>
+            <div class="col-4">
+              <%= link_to(post_path(post.id), class:"text-dark ml-5") do %>
                 <%= post.comments.count %>件のコメント
+              <% end %>
+            </div>
+            <div class="col-4">
+              <%= link_to(post_path(post.id), class:"text-dark") do %>
+                <%= post.created_at.to_s(:datetime_jp) %>
               <% end %>
             </div>
           </div>
