--- a/app/views/user/posts/_index_all.html.erb
+++ b/app/views/user/posts/_index_all.html.erb
@@ -1,49 +1,52 @@
 <% posts.each do |post| %>
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-3">
-        <%= link_to user_path(post.user_id) do %>
-          <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "60x60" %>
-          <%= post.user.name %>
-        <% end %>
-        </div>
-        <div class="col-9">
-          <p class="card-genre text-secondary">
-            ジャンル ： <%= post.genre.genre_name %>
-          </p>
-          <p class="card-title">
-            <%= link_to(post_path(post.id), class:"text-dark") do %>
-            <strong><%= post.title %></strong>
-            <% end %>
-          </p>
-          <p class="card-time text-secondary">
-            <%= post.created_at.to_s(:datetime_jp) %>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="text-center ml-5 mb-2">
-    <%= link_to post_path(post) do %>
-      <%= attachment_image_tag post, :image, size: "600x400",class:"post_image_media" %>
-    <% end %>
-    </div>
-      <div class="row mb-3">
-        <div class="col-2 offset-2 mt-2">
-          <div id="index_good_<%= post.id %>">
-            <%= render 'user/goods/good', post: post %>
-          </div>
-        </div>
-        <div class="col-2 mt-2">
-          <div id="index_bad_<%= post.id %>">
-            <%= render 'user/bads/bad', post: post %>
-          </div>
-        </div>
-        <div class="col-4 offset-2 mt-2">
-          <%= link_to(post_path(post.id), class:"text-dark") do %>
-            <%= post.comments.count %>件のコメント
+  <% if post.bads.count < 10 %>
+    <div class="card w-50 mx-auto mt-4 shadow-lg">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-3">
+          <%= link_to user_path(post.user_id) do %>
+            <%= attachment_image_tag post.user, :profile_image, fallback: "no_image.jpg", class:"mt-3 rounded-circle", size: "60x60" %>
+            <%= post.user.name %>
           <% end %>
+          </div>
+          <div class="col-9">
+            <p class="card-genre text-secondary">
+              ジャンル ： <%= post.genre.genre_name %>
+            </p>
+            <p class="card-title">
+              <%= link_to(post_path(post.id), class:"text-dark") do %>
+              <strong><%= post.title %></strong>
+              <% end %>
+            </p>
+            <p class="card-time text-secondary">
+              <%= post.created_at.to_s(:datetime_jp) %>
+            </p>
+          </div>
         </div>
       </div>
-  </div>
+      <div class="text-center ml-5 mb-2">
+      <%= link_to post_path(post) do %>
+        <%= attachment_image_tag post, :image, size: "600x400",class:"post_image_media" %>
+      <% end %>
+      </div>
+        <div class="row mb-3">
+          <div class="col-2 offset-2 mt-2">
+            <div id="index_good_<%= post.id %>">
+              <%= render 'user/goods/good', post: post %>
+            </div>
+          </div>
+          <div class="col-2 mt-2">
+            <div id="index_bad_<%= post.id %>">
+              <%= render 'user/bads/bad', post: post %>
+            </div>
+          </div>
+          <div class="col-4 offset-2 mt-2">
+            <%= link_to(post_path(post.id), class:"text-dark") do %>
+              <%= post.comments.count %>件のコメント
+            <% end %>
+          </div>
+        </div>
+    </div>
+  <% else %>
+  <% end %>
 <% end %>
