--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,33 +1,36 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <h2>投稿編集</h2>
-      <!--部分テンプレを準備する-->
-      <%= form_with model: @post, local: :true do |f| %>
-        <div class="form_input">
-          <%= f.label :genre_id, "ジャンル" %><br/>
-          <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, :include_blank => "ジャンルを選択してください" %>
-        </div>
+      <div class="card w-100 mx-auto mt-4 mb-4 shadow-lg">
+        <div class="card-body">
+          <h3 class="user-edit text-secondary text-center my-4">投稿編集</h3>
+          <%= form_with model: @post, local: :true do |f| %>
+            <div class="form_input">
+              <%= f.label :genre_id, "ジャンル" %><br/>
+              <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, :include_blank => "ジャンルを選択してください" %>
+            </div>
 
-        <div class="form-group">
-          <%= f.label :投稿画像 %>
-          <%= f.attachment_field :image, class: 'post_image' %>
-        </div>
+            <div class="form-group my-4">
+              <%= f.label :投稿画像 %>
+              <%= f.attachment_field :image, class: 'post_image' %>
+            </div>
 
-        <div class="form-group">
-          <%= f.label :タイトル %>
-          <%= f.text_field :title, class: 'form-control post_title' %>
-        </div>
+            <div class="form-group my-4">
+              <%= f.label :タイトル %>
+              <%= f.text_field :title, class: 'form-control post_title' %>
+            </div>
 
-        <div class="form-group">
-          <%= f.label :本文 %>
-          <%= f.text_field :body, class: 'form-control post_body' %>
-        </div>
+            <div class="form-group my-4">
+              <%= f.label :本文 %>
+              <%= f.text_field :body, class: 'form-control post_body' %>
+            </div>
 
-        <div class="form-group">
-          <%= f.submit "更新", class: 'btn btn-success' %>
+            <div class="form-group my-4">
+              <%= f.submit "更新", class: 'btn btn-success' %>
+            </div>
+          <% end %>
         </div>
-      <% end %>
+      </div>
     </div>
   </div>
 </div>
