--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -5,7 +5,7 @@
         <table class="table table-hover table-invers">
           <div class="col-md-2">
             <%= link_to user_path(@post.user_id) do %>
-              <%= attachment_image_tag(@post.user, :profile_image, size: "80x80", format: 'jpeg', class:"mt-3 rounded-circle", fallback: "no_image.jpg") %><br>
+              <%= attachment_image_tag(@post.user, :profile_image, size: "80x80", class:"mt-3 rounded-circle", fallback: "no_image.jpg") %><br>
               <div class="text-center mr-4">
                 <%= @post.user.name %>
               </div>
